tests/errors/err_too_few_args.mix
// ERROR: expects 2 argument(s), got 1
add(a: int, b: int) -> int
    a + b

main()
    print(add(1))
